WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93972
beginElement() does not observe updated animation attributes
https://bugs.webkit.org/show_bug.cgi?id=93972
Summary
beginElement() does not observe updated animation attributes
Florin Malita
Reported
2012-08-14 08:53:13 PDT
Created
attachment 158343
[details]
Circle should move left-to-right, then right-to-left If an expired animation's attributes are updated programmatically and then the animation is restarted using beginElement(), the new values are ignored. In the attached test, the green circle should animate left-to-right, then right-to-left. Instead, it animates left-to-right twice. A workaround is to update the 'dur' attribute. Chromium issue:
http://code.google.com/p/chromium/issues/detail?id=141793
Attachments
Circle should move left-to-right, then right-to-left
(558 bytes, image/svg+xml)
2012-08-14 08:53 PDT
,
Florin Malita
no flags
Details
Patch
(6.09 KB, patch)
2012-08-14 12:43 PDT
,
Florin Malita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Florin Malita
Comment 1
2012-08-14 12:34:51 PDT
The 'from', 'to' & 'by' attributes are not claimed (isSupportedAttribute) by any of the SVGSMILElement descendants, hence updates are ignored. Patch coming soon.
Florin Malita
Comment 2
2012-08-14 12:43:52 PDT
Created
attachment 158394
[details]
Patch
Dirk Schulze
Comment 3
2012-08-14 13:33:16 PDT
Comment on
attachment 158394
[details]
Patch I don't think that this approach is correct. You make these attributes animatable, but they aren't from the spec. point of view.
Florin Malita
Comment 4
2012-08-14 13:45:07 PDT
(In reply to
comment #3
)
> (From update of
attachment 158394
[details]
) > I don't think that this approach is correct. You make these attributes animatable, but they aren't from the spec. point of view.
Hm, not sure I understand: why are you saying the patch makes these animatable? AFAICT, isSupportedAttribute() == true doesn't mean the attribute is animatable - am I missing something? Looking at both SVG & SMIL specs, from/to/by appear to be defined at the same level as begin/end/dur/... - which are currently listed in SVGSMILElement::isSupportedAttribute().
Dirk Schulze
Comment 5
2012-08-14 13:51:32 PDT
Comment on
attachment 158394
[details]
Patch Sorry, my fault. Mixed it up with something different :(.
WebKit Review Bot
Comment 6
2012-08-14 14:34:12 PDT
Comment on
attachment 158394
[details]
Patch Clearing flags on attachment: 158394 Committed
r125608
: <
http://trac.webkit.org/changeset/125608
>
WebKit Review Bot
Comment 7
2012-08-14 14:34:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug