beginElement() does not observe updated animation attributes https://bugs.webkit.org/show_bug.cgi?id=93972

Reviewed by Dirk Schulze.

Source/WebCore:

The SVG animation attributes 'from', 'to' and 'by' should be registered as supported
SVGSMILElement attributes in order to trigger animationAttributeChanged() on dynamic
updates.

Test: svg/animations/updated-attributes.html

* svg/SVGAnimationElement.cpp:
(WebCore::SVGAnimationElement::updateAnimation):
Minor optimization - avoid recalculating animationMode().

* svg/animation/SVGSMILElement.cpp:
(WebCore::SVGSMILElement::isSupportedAttribute):
Register 'from', 'to' and 'by' as supported SVGSMILElement attributes.

LayoutTests:

* svg/animations/updated-attributes-expected.txt: Added.
* svg/animations/updated-attributes.html: Added.


Canonical link: https://commits.webkit.org/111874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125608 268f45cc-cd09-0410-ab3c-d52691b4dbfc